# django-media-player

./: .gitignore  readme.md
media_app/: requirements.txt
media_app/media/: admin.py  models.py  urls.py  views.py
media_app/media/management/commands/: add_media.py
media_app/media/migrations/: 0001_initial.py  0002_alter_audio_path_alter_radio_path_alter_video_path.py  0003_audio_play_count_radio_play_count_video_play_count.py
media_app/media/static/media/css/: player.css
media_app/media/static/media/js/: audio_player.js  common.js  host_handler.js  player_base.js  player_handler.js  radio_player.js  video_player.js  worker.js
media_app/media/templates/media/: player.html
media_app/media/templates/media/admin/: audio_change_form.html  audio_change_list.html  media_change_form.html  media_change_list.html  radio_change_form.html  radio_change_list.html  video_change_form.html  video_change_list.html
media_app/media/templatetags/: md5static.py
media_app/media_app/: asgi.py  settings.py  urls.py  wsgi.py
stream_backend/: Cargo.toml
stream_backend/src/: handlers.rs  main.rs
